--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bower": "^1.8.2",
     "gulp": "^3.8.11",
+    "gulp-minify-css": "^1.2.4",
     "imagemin-pngquant": "^5.0.1"
   },
   "devDependencies": {
