--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "bower": "^1.8.2",
     "gulp": "^3.8.11",
     "gulp-minify-css": "^1.2.4",
-    "imagemin-pngquant": "^5.0.1"
+    "imagemin-pngquant": "^5.0.1",
+    "wiredep": "^4.0.0"
   },
   "devDependencies": {
     "browser-sync": "^2.18.12",
     "gulp-autoprefixer": "^4.0.0",
+    "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^3.4.1",
     "gulp-imagemin": "^3.3.0",
     "gulp-load-plugins": "^1.5.0",
